--- a/index.html
+++ b/index.html
@@ -1,5 +1,63 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body></body>
+    <head>
+        <title>My Portfolio</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <h3>SREEJA RADISH</h3>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="content">
+                <div class="imageBlocker">
+                    <img src="Images/istockphoto-938196638-612x612.jpg" height="300px" width="200px">
+                </div>
+                <div class="contentWrapper">
+                    <p>Hi I'm Sreeja Radish</p>
+                    <p>Junior Web Developer</p>
+                    <p>Technology is my passion and I like to learn new skills and implement them in my work. </p>
+                </div>
+            </div>
+            <section id="projects">
+                <div class="projectImageContainer">
+                    <div class="projectImageWrapper">
+                        <a href="https://sreejaradish.github.io/CompanyHomePageProject/" target="_blank"><img src="Images/CompanyHomePageProject.png" height="250px" width="200px" alt="CompanyHomePageProject" 
+                            ></a>
+                            <h3 class="imageHeader">Company Home Page </h3>
+                            <p class="imagePara">I have designed this home page for a imaginary Yoga training Institute using HTML and CSS. </p>
+                    </div>
+                    <div class="projectImageWrapper">
+                        <a href="https://sreejaradish.github.io/excursion/" target="_blank"><img src="Images/excursion.png" height="250px" width="200px" alt="Excursion Project" 
+                            ></a>
+                            <h3 class="imageHeader">Excursion </h3>
+                            <p class="imagePara">This web page  advertises a mobile app which helps users record and share their
+                                 experiences. </p>
+                    </div>
+                    <div class="projectImageWrapper">
+                        <a href="https://sreejaradish.github.io/CyclingEventProject/" target="_blank"><img src="Images/FamilyCyclingEventProject.png" height="250px" width="200px" alt="Excursion Project" 
+                            ></a>
+                            <h3 class="imageHeader">Family Cycling Event</h3>
+                            <p class="imagePara">This web page  advertises a family cycling event  which helps users to book for the event.
+                            </p>
+                    </div>
+                    <div class="projectImageWrapper">
+                        <a href="file:///D:/Course-ITCareerSwitch/FullStackDevelopment/TeaCozyProject/index.html" target="_blank"><img src="Images/TeaCozyProject.png" height="250px" width="200px" alt="Excursion Project" 
+                            ></a>
+                            <h3 class="imageHeader">Tea Cozy Page</h3>
+                            <p class="imagePara">In this project, I've created a fictional tea shop website.
+                            </p>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </body>
 </html>
