--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body></body>
+    <head>
+        <title>Contact me</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+    </head>
+    <body>
+      
+            <header>
+                <p>SREEJA RADISH</p>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Skills</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+      <main>
+        <div class="content">
+            <div class="imageBlocker">
+                <img id="profilePic" src="Images/istockphoto-938196638-612x612.jpg" height="400px" width="300px">
+            </div>
+            <div class="contentWrapper">
+                <p class="contentHeading">Contact me</p>
+                <p class="description">Email : sreejaradish@gmail.com</p>
+                <p class="description">Phone : 07407073363 </p>
+            </div>
+        </div>
+       
+      </main>
+    </body>
 </html>
