Website is made responsive

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                    
                     <p class="description">I'm a full stack web developer based in Manchester, UK </p>
                     <button id="projectBtn" onclick="btnClickFunction()">My Projects</button>
+                    <button id="skillsBtn" onclick="btnClickFunctionSkills()">My Skills</button>
                 </div>
             </div>
             <section id="projects">
@@ -61,6 +62,26 @@
                             <h3 class="imageHeader">Tea Cozy Page</h3>
                             <p class="imagePara">In this project, I've created a fictional tea shop website.
                             </p>
+                    </div>
+                </div>
+            </section>
+            <section id="skills">
+                <h2 class="projectHeading">Skills</h2>
+                <div class="skillContainer">
+                    <div class="skillsWrapper">
+                        <img src="Images/html.jpg" alt="html" height="50px" width="50px">
+                    </div>
+                    <div class="skillsWrapper">
+                        <img src="Images/css.jpg" height="50px" width="50px" alt="html">
+                    </div>
+                    <div class="skillsWrapper">
+                        <img src="Images/javascript.jpg" height="50px" width="50px" alt="html">
+                    </div>
+                    <div class="skillsWrapper">
+                        <img src="Images/dotnet.jpg" height="50px" width="50px" alt="html">
+                    </div>
+                    <div class="skillsWrapper">
+                        <img src="Images/sql.jpg" height="50px" width="50px" alt="html">
                     </div>
                 </div>
             </section>
